# opengl_engine

./: .gitmodules  CMakeLists.txt
cmake/: assimp.cmake  glad.cmake  glfw.cmake  imgui.cmake  third_party.cmake
include/: camera.hh  cube_map.hh  debug.hh  imgui_windows.hh  input.hh  mesh.hh  model.hh  renderer.hh  shader.hh  texture.hh  time.hh  window.hh
include/gl_buffers/: frame_buffer.hh  index_buffer.hh  vertex_array.hh  vertex_buffer.hh  vertex_buffer_layout.hh
shaders/: cubemap.frag  cubemap.vert  shader.frag  shader.vert
src/: camera.cc  cube_map.cc  imgui_windows.cc  input.cc  main.cc  mesh.cc  model.cc  shader.cc  stb_image.cc  texture.cc  time.cc  window.cc
src/gl_buffers/: frame_buffer.cc  index_buffer.cc  vertex_array.cc  vertex_buffer.cc  vertex_buffer_layout.cc
